fix cart popup overflow hidden

--- a/styles/_cart-popup.scss
+++ b/styles/_cart-popup.scss
@@ -103,8 +103,7 @@
     right: unset;
     transform-origin: center bottom;
     transform: scale3d(0, 0, 0);
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
     &.show {
       bottom: 0;
       transform: scale3d(1, 1, 1);
@@ -118,6 +117,11 @@
     background-color: rgb(255, 255, 255);
     box-sizing: content-box;
     border-radius: 6px;
+    @include sm {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
     .cart_popup-header {
       background-color: rgb(255, 255, 255);
       display: flex;
